--- a/templates/indexUP4.html
+++ b/templates/indexUP4.html
@@ -4,7 +4,7 @@
         <title>Unit 4 Project</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}">
     </head>
     <body>
         <div class="container">
