--- a/templates/indexUP4.html
+++ b/templates/indexUP4.html
@@ -11,7 +11,7 @@
             <h1>Dallin Clarke</h1>
             <div class="contact section">
                 <h2>About Me</h2>
-                <p>My name is Dallin Clarke and I am a student at Utah State University. I am studying Technology Systems at Utah State University. <br> If you want to see more about me, check out my <a href="aboutme.html">about me</a> page.</p>
+                <p>My name is Dallin Clarke and I am a student at Utah State University. I am studying Technology Systems at Utah State University. <br> If you want to see more about me, check out my <a href="/about">about me</a> page.</p>
             </div>
         </div>
 
