Update aboutme and indexUP4
I updated the link for index and for the home button to work on aboutme.html

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -4,12 +4,12 @@
         <title>Unit 4 Project</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css')}}">
     </head>
     <body>
         <div class="container">
             <h1>Dallin Clarke</h1>
-            <button onclick="window.location.href='indexUP4.html'">Home</button>
+            <button onclick="window.location.href='/'">Home</button>
             <div class="contact section">
                 <h2>Contact Information</h2>
                 <p>Email: dallin.clarke@usu.edu</p>
