--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -60,3 +60,15 @@ h1 {
     background-color: var(--secondary-color); 
     box-shadow: 10px  5px var(--accent-color);
 } 
+
+a { 
+    text-decoration: none; 
+}
+
+a:hover { 
+    text-decoration: underline; 
+}
+
+a:visited { 
+    color: var(--text-color); 
+}
